Src\Changes.txt
Add new items to top.
(This summarizes all changes to all files under Src, including Src\Languages.)

2006-08-01 Kimmo
 PATCH: [ 1531845 ] Fix memory leak after find
  Src/editlib: ccrystaltextview.cpp
 PATCH: [ 1531957 ] Fix imagelist memory leak in editor
  Src/editlib: ccrystaltextview.cpp
 PATCH: [ 1430331 ] New Debug menu
  Submitted by Perry, modified by me
  Src: MainFrm.cpp MainFrm.h Merge.rc resource.h
  Src/Languages/*: Merge*.rc
 PATCH: [ 1531319 ] Tidy Folder compare progress dialog
  Src: Merge.rc
  Src/Languages/*: Merge*.rc

2006-07-31 Kimmo
 PATCH: [ 1531293 ] Fix wrong cursor position after find
  Src: ccrystaltextview.cpp ccrystaltextview.h cfindtextdlg.cpp
 PATCH: [ 1406051 ] code cleanup for ScriptFileActions
  Submitted by Perry
  Src: DirActions.cpp FileActionScript.cpp FileActionScript.h
 PATCH: [ 1530459 ] Add some doxygen comments for ViewableWhitespace
  Src: ViewableWhitespace.cpp ViewableWhitespace.h

2006-07-30 Takashi
 BUG: [ 1528322 ] Crash when using F6 / Bugg for file differences
  Src: MergeEditView.cpp

2006-07-30 Kimmo
 PATCH: [ 1530352 ] Start flashing WinMerge window when folder compare is ready
  Src: DirView.cpp MainFrm.cpp MainFrm.h
 PATCH: [ 1529995 ] Swedish translation update for 2.5.5.4+
  Submitted by Hans Eriksson
  Src/Languages/Swedish: MergeSwedish.rc
 PATCH: [ 1530655 ] Catalan translation update
  Submitted by Jordi Vilar
  Src/Languages/Catalan: MergeCatalan.rc

2006-07-29 Takashi
 PATCH: [ 1529915 ] Refresh menu on DirView does not work correctly
  Src: DirActions.cpp DirScan.cpp

2006-07-28 Kimmo
 PATCH: [ 1529599 ] Cleanup DiffWrapper
  Src: DiffWrapper.cpp DiffWrapper.h MergeDoc.cpp PatchTool.cpp
 PATCH: [ 1529965 ] Add error messages for managing file filters
  Src: FileFiltersDlg.cpp FileFiltersDlg.h Merge.rc resource.h
  Src/Languages/*: Merge*.rc

2006-07-27 Takashi
 PATCH: [ 1527843 ] prevent dialog from flickering
  Src: DirCompProgressDlg.cpp DirView.cpp