@@ -550,7 +550,7 @@ static void StoreDiffData(DIFFITEM &di, CDiffContext * pCtxt,
 
 		if (pDiffFileData->m_ntrivialdiffs > -1)
 			di.nsdiffs = pDiffFileData->m_ndiffs - pDiffFileData->m_ntrivialdiffs;
-		di.ndiffs = pDiffFileData->m_ndiffs;
+		di.nidiffs = pDiffFileData->m_ntrivialdiffs;
 
 		if (!di.isSideLeft())
 		{
