@@ -2,6 +2,12 @@ Src\Changes.txt
 Add new items to top.
 (This summarizes all changes to all files under Src, including Src\Languages.)
 
+2006-08-02 Kimmo
+ PATCH: [ 1532743 ] Improve difference count columns in folder compare
+  Src: DiffItem.h DiffItemList.cpp DirScan.cpp DirVierwColItems.cpp
+   Merge.rc resource.h
+  Src/Languages/*: Merge*.rc
+
 2006-08-01 Kimmo
  PATCH: [ 1531845 ] Fix memory leak after find
   Src/editlib: ccrystaltextview.cpp
